name:                md-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/clample/md-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Lample
maintainer:          clample@testobject.com
copyright:           2016 Chris Lample
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable md-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory
