name:                md-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/clample/md-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Lample
maintainer:          clample@testobject.com
copyright:           2016 Chris Lample
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010

executable md-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                       , directory
                       , md-haskell

test-suite md-haskell-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
                 , QuickCheck
                 , test-framework
                 , test-framework-quickcheck2
                 , md-haskell
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/clample/md-haskell
